# spacy-universal-sentence-encoder-tfhub

./: README.md  setup.cfg
meta/: en_use_lg.json  en_use_md.json  xx_use_lg.json  xx_use_md.json
universal_sentence_encoder/: language.py
