[metadata]
version = 0.2.1
description = SpaCy models for using TF Hub Universal Sentence Encoder

[options]
include_package_data = true
install_requires =
    tensorflow==2.1.0
    spacy
    tensorflow-hub

[options.entry_points]
spacy_factories =
    overwrite_vectors = universal_sentence_encoder:OverwriteVectors